--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@styled-icons/boxicons-solid": "^10.0.0",
     "@styled-icons/evil": "^10.0.0",
     "axios": "^0.19.2",
-        "connected-react-router": "^6.8.0",
+    "connected-react-router": "^6.8.0",
     "history": "^4.10.1",
     "json-server": "^0.16.1",
     "lodash": "^4.17.15",
@@ -22,7 +22,8 @@
     "redux-saga": "^1.1.3",
     "reduxsauce": "^1.1.2",
     "styled-components": "^5.1.0",
-    "styled-icons": "^10.2.1"
+    "styled-icons": "^10.2.1",
+    "styled-spinkit": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -67,14 +68,12 @@
     "@testing-library/user-event": "^10.3.1",
     "babel-eslint": "^10.1.0",
     "babel-plugin-module-resolver": "^4.0.0",
-    
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-import-resolver-babel-module": "^5.1.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.20.0",
-    
     "redux-mock-store": "^1.5.4"
   }
 }
