--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "styled-spinkit": "^1.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm install -g serve && serve -s build",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "test:coverage": "react-scripts test --coverage",
